trade making skills responsive part 1

--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -1,19 +1,29 @@
 <div class="skills-section">
-    <div class="skills-symbols">
-      @for (skill of skills; track skill.name) {
-        <div class="skills-icon-and-name">
-          <img [src]="skill.imgSrc" alt="{{skill.name}}">
-          <p>{{ skill.name }}</p>
-        </div>
-      }
-    </div>
-    <div class="skills-line"></div>
-    <div class="skills-text-and-button">
-      <h1>My skills</h1>
-      <span>I have gained experience in building projects with different frontend technologies and concepts.</span>
-      <h2>Looking for another skill?</h2>
-      <span>Feel free to contact me. I look forward to expanding on my previous knowledge.</span>
-      <button>Get in touch</button>
+  <div class="skills-left">
+    <div class="skills-line d-none"></div>
+    <h1 class="d-none">My skills</h1>
+    <span class="d-none">I have gained experience in building projects with different frontend technologies and concepts.</span>
+      <div class="skills-symbols">
+        @for (skill of skills; track skill.name) {
+          <div class="skills-icon-and-name">
+            <img [src]="skill.imgSrc" alt="{{skill.name}}">
+            <p>{{ skill.name }}</p>
+          </div>
+        }
+      </div>
+      <h2 class="d-none">Looking for <strong style="color: #ff3f79">another skill</strong>?</h2>
+      <span class="d-none">Feel free to contact me. I look forward to expanding on my previous knowledge.</span>
+      <button class="d-none">Get in touch</button>
+  </div>
+    <div class="skills-right">
+      <div class="skills-line"></div>
+      <div class="skills-text-and-button">
+        <h1>My skills</h1>
+        <span>I have gained experience in building projects with different frontend technologies and concepts.</span>
+        <h2>Looking for <strong style="color: #ff3f79">another skill</strong>?</h2>
+        <span>Feel free to contact me. I look forward to expanding on my previous knowledge.</span>
+        <button>Get in touch</button>
+      </div>
     </div>
   </div>
   
