--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -3,7 +3,7 @@
 .about-me-section {
   z-index: 4;
   position: relative;
-  border: 1px solid red;
+  // border: 1px solid red;
   display: flex;
   flex-direction: row;
   margin-top: 100px;
@@ -12,7 +12,7 @@
 
 .about-me-left {
   width: 50%;
-  border: 1px solid rgb(162, 0, 255);
+  // border: 1px solid rgb(162, 0, 255);
   padding-left: $padding-large;
   padding-right: 50px;
   display: flex;
@@ -23,7 +23,7 @@
   box-sizing: border-box;
 
   > h1 {
-    font-size: clamp(2.5rem, 4vw + 1rem, 5.6rem);
+    font-size: 5.6rem;
     margin-block-start: 0.1em;
     margin-block-end: 0.1em;
   }
@@ -53,7 +53,7 @@
 
 .about-me-right {
   width: 50%;
-  border: 1px solid greenyellow;
+  // border: 1px solid greenyellow;
   display: flex;
   justify-content: flex-end;
   align-items: center;
