--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -4,19 +4,17 @@
     <h1 class="d-none">My skills</h1>
     <span class="d-none">I have gained experience in building projects with different frontend technologies and concepts.</span>
     <div class="skills-symbols">
-      <!-- Loop durch die skills Liste mit der @for-Direktive -->
       @for (skill of skills; track skill.name) {
-        <div class="skills-icon-and-name" [ngClass]="{'highlight': skill.isHighlight || false}">
+        <div class="skills-icon-and-name" 
+             [ngClass]="{'highlight': skill.isHighlight || false}" 
+             (mouseenter)="onHover(skill, $index)" 
+             (mouseleave)="onLeave(skill, $index)">
           <img 
             [src]="skill.imgSrc" 
-            alt="{{skill.name}}" 
-            (mouseenter)="onHover(skill, $index)" 
-            (mouseleave)="onLeave(skill, $index)">
+            alt="{{skill.name}}">
           <p>{{ skill.name }}</p>
-          
-          <!-- Tooltip nur für das 11. Element "Continually learning" -->
           @if (skill.isHighlight) {
-            <img src="assets/skills-icon-learning-interest.png" alt="React and Vue Tooltip" class="tooltip-image">
+            <img src="assets/skills-icon-learning-interest.png" alt="React and Vue Tooltip" class="tooltip-image" [ngClass]="{ 'd-none': !showTooltip }">
           }
         </div>
       }
