--- a/src/app/skills/skills.component.scss
+++ b/src/app/skills/skills.component.scss
@@ -227,11 +227,12 @@
   transform: translateY(-5px);
 }
 
+/* Tooltip Image */
 .tooltip-image {
   position: absolute;
-  top: 0; /* Platziert das Bild über dem Symbol */
-  left: 0; /* Zentriert das Tooltip-Bild relativ zum Symbol */
-  transform: translateX(12px); /* Verschiebt das Bild leicht nach rechts */
+  top: 0;
+  left: 0;
+  transform: translateX(25px) translateY(-150px);
   z-index: 10;
   width: 208px !important;
   height: auto;
@@ -239,17 +240,12 @@
   max-height: none !important;
 }
 
-.skills-icon-and-name.highlight:hover .tooltip-image {
-  display: block;
-}
-
 .skills-icon-and-name.highlight p {
-  color: #ff3f79; 
-  transition: color 0.1s ease;
+  color: #ff3f79; /* Grundfarbe */
+  transition: color 0.3s ease; /* Sanfter Übergang */
 }
 
-.skills-icon-and-name.highlight p:hover {
-  color: #ffffff;
+.skills-icon-and-name.highlight:hover p {
+  color: #ffffff; /* Farbe beim Hover */
 }
-
 
