--- a/src/app/skills/skills.component.scss
+++ b/src/app/skills/skills.component.scss
@@ -1,6 +1,5 @@
 @import '../../styles/variables.scss';
 
-/* Standardmäßig .d-none verstecken */
 .d-none {
   display: none;
 }
@@ -16,17 +15,17 @@
 .skills-left {
   width: 50%;
   box-sizing: border-box;
-  padding: 0 50px;
-  border: 1px solid rgb(105, 225, 13);
+  padding: 0 0 0 120px;
+  // border: 1px solid rgb(105, 225, 13);
 }
 
 .skills-right {
   width: 50%;
-  border: 1px solid rgb(130, 13, 225);
+  // border: 1px solid rgb(130, 13, 225);
 }
 
 .skills-left .skills-symbols {
-  border: 1px solid blue;
+  // border: 1px solid blue;
   width: 100%;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -54,7 +53,7 @@
 .skills-right .skills-text-and-button {
   height: 100%;
   box-sizing: border-box;
-  border: 1px solid rgb(255, 248, 47);
+  // border: 1px solid rgb(255, 248, 47);
   display: flex;
   align-items: flex-start;
   justify-content: flex-end;
@@ -74,11 +73,19 @@
   font-size: 5rem;
   margin-block-start: 0.1em;
   margin-block-end: 0.1em;
+  text-align: end;
 }
 
-.skills-left > span, h2 {
+.skills-left > span {
   text-align: right;
-  padding: 12px 0;
+  padding: 24px 0;
+}
+
+.skills-left > h2 {
+  text-align: right;
+  padding: 24px 0 0 0;
+  margin-block-start: 0.1em;
+  margin-block-end: 0.1em;
 }
 
 .skills-left button {
@@ -101,7 +108,7 @@
   right: 0;
   top: 75px;
   border: 0;
-  border-top: 4px solid #00bf89;
+  // border-top: 4px solid #00bf89;
   border-top-left-radius: 20px;
   border-bottom-left-radius: 20px;
   width: 100px;
@@ -152,7 +159,6 @@
 }
 
 
-
 /* Ab 1200px wird das Layout einspaltig und die d-none-Elemente angezeigt */
 @media (max-width: 1200px) {
   .skills-section {
@@ -168,7 +174,7 @@
   /* skills-left übernimmt die volle Breite */
   .skills-left {
     width: 100%;
-    padding: 0 50px;
+    padding: 0 100px 0 120px;
   }
 
   /* .d-none-Elemente anzeigen */
@@ -179,7 +185,7 @@
   /* Button zentrieren in der mobilen Ansicht */
   .skills-left button {
     display: block;
-    margin: 30px auto 0 auto; /* Zentrierung durch auto-Margins */
+    margin: 0 auto 0 auto; /* Zentrierung durch auto-Margins */
   }
 }
 
@@ -219,10 +225,6 @@
 }
 
 @media (max-width: 768px) {
-  .skills-section {
-    padding: 0 25px;
-  }
-
   .skills-symbols {
     grid-template-columns: repeat(2, 1fr);
   }
@@ -230,6 +232,16 @@
   .skills-symbols img {
     max-width: 60px;
     max-height: 60px;
+  }
+
+  .skills-left {
+    padding: 0 50px;
+  }
+}
+
+@media (max-width: 560px) {
+  .skills-left {
+    padding: 0 25px;
   }
 }
 
