--- a/src/app/skills/skills.component.scss
+++ b/src/app/skills/skills.component.scss
@@ -10,29 +10,35 @@
   flex-direction: row;
   position: relative;
   margin-top: 100px;
+  justify-content: center;
+  align-items: center;
 }
 
 .skills-left {
   width: 50%;
   box-sizing: border-box;
   padding: 0 0 0 120px;
-  // border: 1px solid rgb(105, 225, 13);
+border: 1px solid rgb(105, 225, 13);
 }
 
 .skills-right {
   width: 50%;
-  // border: 1px solid rgb(130, 13, 225);
+border: 1px solid rgb(130, 13, 225);
 }
 
 .skills-left .skills-symbols {
-  // border: 1px solid blue;
+  border: 1px solid blue;
   width: 100%;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 12px;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 40px;
   align-content: center;
   justify-items: center;
-  align-items: center;
+  align-items: center;  
+}
+
+.skills-left button {
+  display: none;
 }
 
 .skills-icon-and-name {
@@ -41,11 +47,12 @@
   align-items: center;
   justify-content: center;
   position: relative;
+  text-align: center;
 }
 
 .skills-symbols img {
-  max-width: 80px;
-  max-height: 80px;
+  max-width: 90px;
+  max-height: 90px;
   object-fit: contain;
 }
 
@@ -53,7 +60,7 @@
 .skills-right .skills-text-and-button {
   height: 100%;
   box-sizing: border-box;
-  // border: 1px solid rgb(255, 248, 47);
+  border: 1px solid rgb(255, 248, 47);
   display: flex;
   align-items: flex-start;
   justify-content: flex-end;
@@ -78,12 +85,12 @@
 
 .skills-left > span {
   text-align: right;
-  padding: 24px 0;
+  padding: 12px 0 36px 0;
 }
 
 .skills-left > h2 {
   text-align: right;
-  padding: 24px 0 0 0;
+  padding: 12px 0 24px 0;
   margin-block-start: 0.1em;
   margin-block-end: 0.1em;
 }
@@ -108,7 +115,7 @@
   right: 0;
   top: 75px;
   border: 0;
-  // border-top: 4px solid #00bf89;
+  border-top: 4px solid #00bf89;
   border-top-left-radius: 20px;
   border-bottom-left-radius: 20px;
   width: 100px;
@@ -142,12 +149,13 @@
 }
 
 .skills-icon-and-name.highlight p {
-  color: #ff3f79; /* Grundfarbe */
-  transition: color 0.3s ease; /* Sanfter Übergang */
+  color: #ff3f79; 
+  transition: color 0.2s ease; 
+  text-align: center;
 }
 
 .skills-icon-and-name.highlight:hover p {
-  color: #ffffff; /* Farbe beim Hover */
+  color: #ffffff;
 }
 
 .hide-on-hover {
@@ -158,64 +166,53 @@
   display: block;
 }
 
+.skills-icon-and-name img:hover {
+  transform: translateY(-5px);
+}
 
-/* Ab 1200px wird das Layout einspaltig und die d-none-Elemente angezeigt */
+@media (max-width: 1300px) {
+  .skills-right .skills-text-and-button > h1 {
+    font-size: 5rem;
+  }
+
+  .skills-left .skills-symbols {
+    gap: 32px;
+  }
+}
+
+
 @media (max-width: 1200px) {
   .skills-section {
     flex-direction: column;
     align-items: center;
   }
 
-  /* skills-right wird ausgeblendet */
   .skills-right {
     display: none;
   }
 
-  /* skills-left übernimmt die volle Breite */
   .skills-left {
     width: 100%;
     padding: 0 100px 0 120px;
   }
 
-  /* .d-none-Elemente anzeigen */
   .d-none {
     display: block;
   }
 
-  /* Button zentrieren in der mobilen Ansicht */
   .skills-left button {
     display: block;
-    margin: 0 auto 0 auto; /* Zentrierung durch auto-Margins */
-  }
-}
-
-/* Desktop-Ansicht über 1200px */
-@media (min-width: 1200px) {
-  .skills-symbols {
-    grid-template-columns: repeat(3, 1fr);
+    margin: 0 auto 0 auto; 
   }
 
-  .skills-symbols img {
-    max-width: 90px;
-    max-height: 90px;
-  }
-
-  /* Button ausblenden in der Desktop-Ansicht */
-  .skills-left button {
-    display: none;
-  }
-}
-
-/* Responsivität für Symbolgröße und Grid */
-@media (max-width: 1300px) {
-  .skills-right .skills-text-and-button > h1 {
-    font-size: 5rem;
+  .skills-left .skills-symbols {
+    gap: 24px;
   }
 }
 
 @media (max-width: 1024px) {
-  .skills-symbols {
-    grid-template-columns: repeat(2, 1fr);
+  .skills-left .skills-symbols {
+    grid-template-columns: repeat(4, 1fr);
   }
 
   .skills-symbols img {
@@ -225,8 +222,8 @@
 }
 
 @media (max-width: 768px) {
-  .skills-symbols {
-    grid-template-columns: repeat(2, 1fr);
+  .skills-left .skills-symbols {
+    grid-template-columns: repeat(3, 1fr);
   }
 
   .skills-symbols img {
@@ -243,11 +240,16 @@
   .skills-left {
     padding: 0 25px;
   }
+
+  .skills-left .skills-symbols {
+    gap: 24px;
+  }
 }
 
 @media (max-width: 480px) {
-  .skills-symbols {
-    grid-template-columns: repeat(1, 1fr);
+  .skills-left .skills-symbols {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 12px;
   }
 
   .skills-symbols img {
@@ -257,18 +259,16 @@
 }
 
 @media (max-width: 320px) {
-  .skills-symbols {
-    grid-template-columns: repeat(1, 1fr);
-  }
-
   .skills-symbols img {
     max-width: 40px;
     max-height: 40px;
   }
+
+  .skills-left .skills-symbols {
+    gap: 0px;
+  }
 }
 
-.skills-icon-and-name img:hover {
-  transform: translateY(-5px);
-}
+
 
 
