made skills section responsive part 6 - made skills fully responsive

--- a/src/app/intro/intro.component.scss
+++ b/src/app/intro/intro.component.scss
@@ -305,6 +305,10 @@ button {
 }
 
 @media (max-width: 1000px) {
+  .intro-contact-symbols a {
+    font-size: 1rem;
+  }
+
   .intro-element2 {
     top: -550px;
   }
