--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -6,7 +6,7 @@
     gap: 40px;
     max-width: 100vw;
     width: 100%; 
-    border: 1px solid #ff00f2;
+    // border: 1px solid #ff00f2;
     margin-top: 50px;
     flex-wrap: wrap;
     justify-content: center; 
@@ -15,15 +15,18 @@
         margin-block-end: 0;
     }
   }
+
+  .portfolio-head p {
+    margin-block-end: 0;
+    }
   
   .project-container {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    border: 1px solid #ddd;
-    padding: 24px 100px; 
+    // border: 1px solid #ddd;
+    padding: 0 100px; 
     border-radius: 10px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     max-width: 100%; 
     width: 100%;
     position: relative;
@@ -37,7 +40,6 @@
 .project-image img {
   max-width: 100%;
   height: auto;
-  border-radius: 10px;
 }
 
 .project-details {
@@ -58,12 +60,14 @@
 }
 
 h2 {
+  margin-block-start: 0;
     color: #FF3F79;
 }
 
 .project-links {
   display: flex;
   gap: 40px;
+  align-items: center;
 }
 
 .btn-live-test,
@@ -75,6 +79,7 @@ h2 {
 
 .btn-live-test {
   background-color: #FF3F79;
+  border: 2px solid #FF3F79;
   color: white;
 }
 
@@ -82,4 +87,76 @@ h2 {
   background-color: transparent;
   border: 2px solid #00bf89;
   color: #ffffff;
+}
+
+@media (max-width: 1200px) {
+  .portfolio-section {
+    text-align: center;
+  }
+
+  .portfolio-head {
+    padding: 0 100px;
+  }
+
+  .project-container {
+    flex-direction: column;
+  }
+
+  .project-container.reverse-layout {
+    flex-direction: column;
+  }
+
+  .project-container.reverse-layout .project-details {
+  align-items: center !important;
+  text-align: center !important;
+  }
+
+  .project-details {
+    max-width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    align-items: center;
+    justify-content: center;
+}
+}
+
+@media (max-width: 768px) {
+  .portfolio-section {
+    gap: 24px;
+  }
+
+  .portfolio-head {
+    padding: 0 50px;
+  }
+
+  .project-container {
+    padding: 0 50px;
+  }
+}
+
+@media (max-width: 560px) {
+  .portfolio-head {
+    padding: 0 25px;
+  }
+
+  .project-container {
+    padding: 0 25px;
+  }
+}
+
+@media (max-width: 480px) {
+  .portfolio-section {
+    font-size: 0.9rem;
+  }
+}
+
+@media (max-width: 360px) {
+.portfolio-section {
+  font-size: 0.8rem;
+}
+
+  .project-links {
+    gap: 12px;
+  }
 }
