made portfolio section responsive - part 2

--- a/src/app/intro/intro.component.scss
+++ b/src/app/intro/intro.component.scss
@@ -16,6 +16,8 @@
   align-items: center;
   justify-items: stretch;
   position: relative;
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 // Hauptkomponenten und Layout-Details
