--- a/src/app/testimonials/testimonials.component.scss
+++ b/src/app/testimonials/testimonials.component.scss
@@ -1,4 +1,4 @@
-@import '../../styles/variables.scss';
+@import "../../styles/variables.scss";
 
 .testimonial-container {
   display: flex;
@@ -123,5 +123,5 @@
 @media (max-width: 1200px) {
   .single-testimonial {
     flex-direction: column-reverse;
-}
+  }
 }
