improved quote section

--- a/src/app/testimonials/testimonials.component.html
+++ b/src/app/testimonials/testimonials.component.html
@@ -4,10 +4,11 @@
             <img src="../../assets/testimonial-quotation-mark.png" alt="quotation-mark-image" class="quotation-mark-image">
             <p class="quote">{{ testimonials[currentTestimonial].quote }}</p>
             <div class="line-and-author">
-                <div class="testimonial-line"></div>
+                <div class="quote-line"></div>
                 <p class="quote-author">{{ testimonials[currentTestimonial].author }}</p>
             </div>
         </div>
+        <div class="testimonial-line" [class.animate]="true"></div>
         <div class="testimonial-img">
             <img [src]="testimonials[currentTestimonial].imageSrc" [alt]="testimonials[currentTestimonial].author">
         </div>
